<resources>
    <string name="app_name">CoffeeHouse</string>
    <string name="welcome_caffeholic">Welcome Caffeholic!</string>
    <string name="we_need_some_details_to_hook_you_up_better">We need some details to hook you up better.</string>
    <string name="name">Name</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="premium_coffee">Premium Coffee</string>
    <string name="note">Note: per cup: ₹50 \nHot Coffee: ₹5 \nBrewed Coffee ₹7</string>
    <string name="quantity">QUANTITY</string>
    <string name="note_mocha">Note: per cup: ₹70 \nHot Coffee: ₹5 \nBrewed Coffee ₹7</string>
    <string name="note_espresso">Note: per cup: ₹75 \nHot Coffee: ₹5 \nBrewed Coffee ₹7</string>
    <string name="note_frappe">Note: per cup: ₹90 \nHot Coffee: ₹5 \nBrewed Coffee ₹7</string>
</resources>