<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/splash_bg"
    tools:context=".UserDetails" >

  <ImageView
      android:id="@+id/iv_coffeeHouse"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:srcCompat="@drawable/coffee_house" />

  <TextView
      android:id="@+id/tv_welcomeText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/iv_coffeeHouse"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:textColor="@color/white"
      android:textSize="25sp"
      android:text="@string/welcome_caffeholic" />

  <TextView
      android:id="@+id/tv_details"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      app:layout_constraintTop_toBottomOf="@id/tv_welcomeText"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      android:textColor="@color/white"
      android:text="@string/we_need_some_details_to_hook_you_up_better"
      android:textSize="15sp"/>

  <EditText
      android:id="@+id/et_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:background="@color/brown"
      android:ems="10"
      android:inputType="textPersonName"
      android:hint="@string/name"
      android:textColorHint="@color/white"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_details" />

  <EditText
      android:id="@+id/et_mobileNumber"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      app:layout_constraintTop_toBottomOf="@id/et_name"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      android:textColor="@color/white"
      android:background="@color/brown"
      android:ems="10"
      android:textColorHint="@color/white"
      android:hint="@string/enter_your_mobile_number"
      android:inputType="phone" />

  <ImageView
      android:id="@+id/iv_premiumCoffee"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:contentDescription="@string/premium_coffee"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/et_mobileNumber"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      android:alpha="0.7"
      app:srcCompat="@drawable/premium_coffee" />

  <TextView
      android:id="@+id/tv_letsGo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|right"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:textColor="@color/white"
      android:textSize="20sp"
      android:text="@string/let_s_go"
      tools:ignore="RtlHardcoded" />
</androidx.constraintlayout.widget.ConstraintLayout>